--- a/src/page/index.css
+++ b/src/page/index.css
@@ -1,19 +1,19 @@
 Body 
 {  text-align: center ;
-   background-color: #909090 ;
+   background-color: **fondColor** ;
 }
 
 h1 
 {  font-family: "Century Gothic", Helvetica, Verdana, sans-serif ;
    font-size: 52px ;
-   color: white ;
+   color: **texteColor** ;
    font-style: italic ;
 }
 
 h2 
 {  font-family: "Century Gothic", Helvetica, Verdana, sans-serif ;
    font-size: 30px ;
-   color: white ;
+   color: **texteColor** ;
    font-style: italic ;
 }
 
@@ -23,14 +23,14 @@ p
    margin-right: 25px ;
    font-family: "Century Gothic", Helvetica, Verdana, sans-serif ;
    font-size: 20px ;
-   color: white ;
+   color: **texteColor** ;
 }
 
 p.signature, p.signature a, p.signature a:link, p.signature a:hover, p.signature a:visited 
 {  text-align: center ;
    font-family: "Century Gothic", Helvetica, Verdana, sans-serif ;
    font-size: 12px ;
-   color: white ;
+   color: **texteColor** ;
 }
 
 a:hover, a:focus, a:active 
@@ -40,7 +40,7 @@ a:hover, a:focus, a:active
 img.photo 
 {  margin: 8px ;
    padding: 9px ;
-   background-color: white ;
+   background-color: **texteColor** ;
    border-color: #828282 ;
    border-style: solid ;
    border-width: 1px ;
@@ -54,7 +54,7 @@ img.mini
 
 a:hover img 
 {  background-color: #FFFF7D ;
-   box-shadow: 6px 6px 4px 0px #545454 ;
+   box-shadow: 6px 6px 4px 0px rgba(0, 0, 0, 0.3) ;
    position: relative ;
    top: -3px ;
    left: -3px ;
