--- a/src/page/Page Titre/index.css
+++ b/src/page/Page Titre/index.css
@@ -80,6 +80,10 @@ img.mini
    text-align: left ;
    overflow: hidden ;
 }
+span.blocPhoto:hover {
+   background-color: #fffaee ;
+   box-shadow: 6px 6px 7px 0px rgba(0, 0, 0, 0.3) ;
+}
 
 .comment 
 {  position:absolute ;
