--- a/src/page/Page/index.css
+++ b/src/page/Page/index.css
@@ -65,8 +65,8 @@ img.mini
 }
 
 a:hover img 
-{  background-color: #FFFF7D ;
-   box-shadow: 6px 6px 4px 0px rgba(0, 0, 0, 0.3) ;
+{  background-color: #fffaee ;
+   box-shadow: 6px 6px 7px 0px rgba(0, 0, 0, 0.3) ;
    position: relative ;
    top: -3px ;
    left: -3px ;
