--- a/src/page/Base Titre/index.css
+++ b/src/page/Base Titre/index.css
@@ -66,7 +66,8 @@ span.blocPhoto:hover {
 }
 
 .comment 
-{  position:absolute ;
+{  font-family: "Century Gothic", Helvetica, Verdana, sans-serif ;
+   position:absolute ;
    left: 8px ;
    bottom: 3px ;
    height: 20px ;
@@ -76,4 +77,11 @@ span.blocPhoto:hover {
 .zoomimage 
 {  margin: 8px ;
    display: inline-block ;
+}
+
+p.retourhome {
+   text-align: center;
+}
+p.retourhome a {
+   color: **texteColor** ;
 }
